# DFG_MS_Plexus

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: analyse___harmonized_features.ipynb  analyse___plexus_volumes.ipynb  analyse___plexus_volumes___age.ipynb  analyse___plexus_volumes___disease_duration_and_subtypes.ipynb  analyse___plexus_volumes___hc_vs_ms.ipynb  analyse___plexus_volumes___sex.ipynb  analyse___pyradiomics_features.ipynb  eval___late_fusion___lgbm___multiseed.ipynb  eval___late_fusion___mlp___multiseed.ipynb  eval___late_fusion___xgboost___multiseed.ipynb  extract___chp_volume_info.ipynb  extract___pyradiomics_features.ipynb  normalize___pyradiomics_features_with_ICV.ipynb  pyradiomics_conf.yaml  pyradiomics_shape_only_conf.yaml  resample_hc.ipynb  train___balanced_bagging_clf.ipynb  train___balanced_random_forest_clf.ipynb  train___catboost_clf.ipynb  train___cnn_clf.ipynb  train___light_gbm_clf.ipynb  train___logistic_regression_clf.ipynb  train___mlp_clf.ipynb  train___tabnet.ipynb  train___tabpfn.ipynb  train___xgboost_clf.ipynb
scripts/: cast_volumes_to_float32.py  convert_freesurfer.py  create_segm_videos.py  crop_mris.py  eval_nifti_segm_folders.py  eval_nnunet.py  eval_segm_folders.py  extract_cnn_features.py  extract_pyradiomics_features.py  make_splits.py  nii_to_nii_gz.sh  nnunet_finetune_train_folds_2d.sh  nnunet_plan_preprocess.sh  nnunet_train_finetuned_folds_2d.sh  nnunet_train_finetuned_folds_3d_fullres.sh  nyul_udupa_hist_standardization.py
src/dfg_ms_plexus/: data.py  evaluation.py  labels.py  model.py  (+1 more)
